--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,5 +1,14 @@
+body{
+	background-color:#1e0027;
+	background-image: url('../img/back.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size:150% auto;
+}
+
 #mc{
-	background-color:red;
+	background-color:blue;
 	height:80px;
 	width:80px;
 	position:absolute;
@@ -11,7 +20,7 @@
 .bullet{
 	width: 50px;
 	height: 50px;
-	background-color: green;
+	background-color: yellow;
 	position: absolute;
 	z-index:1;
 }
