--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -3,8 +3,8 @@ body{
 	background-image: url('../img/back.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: center;
-  background-size:150% auto;
+  background-position: center center;
+  background-size:cover;
 }
 
 #mc{
