--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -5,6 +5,7 @@ body{
   background-attachment: fixed;
   background-position: center center;
   background-size:cover;
+  overflow:hidden;
 }
 
 #mc{
@@ -23,4 +24,12 @@ body{
 	background-color: yellow;
 	position: absolute;
 	z-index:1;
+}
+
+.enemy{
+	background-color:red;
+	height:80px;
+	width:80px;
+	position:absolute;
+	z-index:2;
 }
